# onnx-model-serving

./: .gitattributes  Cargo.toml  README.md  dockerfile  send_test_image.sh
docker/: copy_lib.sh  dockerfile
model/: militaryaircrafts.onnx
src/: error.rs  handler.rs  main.rs  model.rs  utils.rs  yolo.rs
